@@ -15,21 +15,22 @@ import java.util.*;
 /**
  * @author aleksander.jurczyk@gmail.com on 13.01.16.
  */
+@SuppressWarnings("PMD.LooseCoupling")
 public class EmaxCf2822 implements IMotor {
     private static final org.slf4j.Logger LOGGER = LoggerFactory.getLogger(EmaxCf2822.class);
 
     private int pwmMinDutyMs = 1;
     private int pwmMaxDutyMs = 2;
     private int pwmPeriodMs = 5;
-    private float rpmPrcnLimit = 100f;
+    private float rpmLimit = 100f;
     private IPwmController pwmController;
 
     private String thrustMapFile;
-    private TreeMap<Float, Float> thrustRpmPrcntMap;
-    private float maxThrust;
+    private TreeMap<Float, Float> thrustToRpmMap;
+    private float maxThrustNewtons;
 
-    private float currentRpmPrcnt;
-    private float currentThrustPrcnt;
+    private float currentRpmm;
+    private float currentThrust;
 
     protected void setPwmMinDutyMs(int pwmMinDutyMs) {
         this.pwmMinDutyMs = pwmMinDutyMs;
@@ -52,28 +53,26 @@ public class EmaxCf2822 implements IMotor {
     }
 
     @Override
-    public void setRpmPrcnLimit(float rpmPrcnLimit) {
-        this.rpmPrcnLimit = rpmPrcnLimit;
+    public float getRpmLimit() {
+        return rpmLimit;
     }
 
     @Override
-    public float getRpmPrcntLimit() {
-        return rpmPrcnLimit;
+    public void setRpmLimit(float rpmLimit) {
+        this.rpmLimit = rpmLimit;
     }
 
-    @Override
-    public float getCurrentRpmPrcnt() {
-        return currentRpmPrcnt;
+    public float getCurrentRpmm() {
+        return currentRpmm;
     }
 
-    @Override
-    public float getCurrentThrustPrcnt() {
-        return currentThrustPrcnt;
+    public float getCurrentThrust() {
+        return currentThrust;
     }
 
     @Override
     public float getMaxThrustInNewtons() {
-        return maxThrust;
+        return maxThrustNewtons;
     }
 
     @Override
@@ -91,7 +90,7 @@ public class EmaxCf2822 implements IMotor {
 
     @Override
     public void stop() throws MotorException {
-        setRpmPrcnt(0);
+        setRpm(0);
     }
 
     @Override
@@ -100,78 +99,83 @@ public class EmaxCf2822 implements IMotor {
     }
 
     @Override
-    public void setRpmPrcnt(float rpmPrcnt) throws MotorException {
+    public void setRpm(float rpm) throws MotorException {
         try {
-            LOGGER.debug("[EMAX] Set rpm: " + rpmPrcnt + "%.");
-            if (rpmPrcnt > 100 || rpmPrcnt < 0) {
+            LOGGER.debug("[EMAX] Set rpm: " + rpm + "%.");
+            if (rpm > 100 || rpm < 0) {
                 stop();
-                throw new MotorException("Invalid rpm percent value " + rpmPrcnt + "%. Motor has been stopped.");
+                throw new MotorException("Invalid rpm percent value " + rpm + "%. Motor has been stopped.");
             }
-            float rpmToSet = rpmPrcnt;
-            if (rpmPrcnt > rpmPrcnLimit) {
-                LOGGER.warn("Rpm will be set to limit value. Expected: " + rpmPrcnt + "%. Limit: " + rpmPrcnLimit + "%");
-                rpmToSet = rpmPrcnLimit;
+            float rpmToSet = rpm;
+            if (rpm > rpmLimit) {
+                LOGGER.warn("Rpm will be set to limit value. Expected: " + rpm + "%. Limit: " + rpmLimit + "%");
+                rpmToSet = rpmLimit;
             }
-            pwmController.setDuty(calcPwmFromRpmPercent(rpmToSet));
+            pwmController.setDuty(calcPwmFromRpm(rpmToSet));
 
-            //TODO optimization - conversion is inefficient, if setThrustPrcnt methos is used we know thrustPrcnt already
-            this.currentThrustPrcnt = convertRpmPrcntToThrustPrcnt(rpmToSet);
+            //TODO optimization - conversion is inefficient, if setThrust methos is used we know thrustPrcnt already
+            this.currentThrust = convertRpmToThrust(rpmToSet);
 
-            this.currentRpmPrcnt = rpmToSet;
+            this.currentRpmm = rpmToSet;
         } catch (PwmValRangeException e) {
             throw new MotorException(e.getMessage(), e);
         }
     }
 
     @Override
-    public void setThrustPrcnt(float thrustPrcnt) throws MotorException {
-        LOGGER.debug("[EMAX] Set thrust: " + thrustPrcnt + "%.");
-        if (thrustPrcnt < 0 || thrustPrcnt > 100) {
+    public void setThrust(float thrust) throws MotorException {
+        LOGGER.debug("[EMAX] Set thrust: " + thrust + "%.");
+        if (thrust < 0 || thrust > 100) {
             stop();
-            throw new MotorException("Invalid thrust percent value " + thrustPrcnt + "%. Motor has been stopped.");
+            throw new MotorException("Invalid thrust percent value " + thrust + "%. Motor has been stopped.");
         }
-        setRpmPrcnt(convertThrustPrcntToRpmPrcnt(thrustPrcnt));
+        setRpm(convertThrustToRpm(thrust));
     }
 
     protected void loadThrustMapFromFile(String path) throws MotorException {
-        thrustRpmPrcntMap = new TreeMap<>();
+        thrustToRpmMap = new TreeMap<>();
         try {
             final PropertiesManager propertiesMgr = new PropertiesManager(path);
             for (final String propertyName : propertiesMgr.getPropertiesNames()) {
-                thrustRpmPrcntMap.put(new Float(propertyName), new Float(propertiesMgr.getProperty(propertyName)));
+                thrustToRpmMap.put(Float.valueOf(propertyName), Float.valueOf(propertiesMgr.getProperty(propertyName)));
             }
-            maxThrust = thrustRpmPrcntMap.lastKey();
+            maxThrustNewtons = thrustToRpmMap.lastKey();
         } catch (IOException | PropertyNotFoundException e) {
             throw new MotorException(e.getMessage(), e);
         }
     }
 
-    private float convertRpmPrcntToThrustPrcnt(float rpmPrcnt) {
-        if (rpmPrcnt == 0) {
-            return thrustRpmPrcntMap.firstEntry().getValue();
-        } else if (rpmPrcnt == 100) {
-            return thrustRpmPrcntMap.lastEntry().getValue();
+    @SuppressWarnings("PMD.AvoidLiteralsInIfCondition")
+    private float convertRpmToThrust(float rpm) {
+        if (rpm == 0) {
+            return thrustToRpmMap.firstEntry().getValue();
+        } else if (rpm == 100) {
+            return thrustToRpmMap.lastEntry().getValue();
         }
-        Map.Entry<Float, Float> lowerEntry = thrustRpmPrcntMap.entrySet().stream().filter(entry -> entry.getValue() < rpmPrcnt).max(Comparator.comparing(Map.Entry::getValue)).get();
-        Map.Entry<Float, Float> higherEntry = thrustRpmPrcntMap.entrySet().stream().filter(entry -> entry.getValue() > rpmPrcnt).min(Comparator.comparing(Map.Entry::getValue)).get();
-        final Float diffFraction = (rpmPrcnt - lowerEntry.getValue()) / (higherEntry.getValue() - lowerEntry.getValue());
+        final Map.Entry<Float, Float> lowerEntry = thrustToRpmMap.entrySet().stream().filter(entry -> entry.getValue() < rpm)
+            .max(Comparator.comparing(Map.Entry::getValue)).get();
+
+        final Map.Entry<Float, Float> higherEntry = thrustToRpmMap.entrySet().stream().filter(entry -> entry.getValue() > rpm)
+            .min(Comparator.comparing(Map.Entry::getValue)).get();
+
+        final Float diffFraction = (rpm - lowerEntry.getValue()) / (higherEntry.getValue() - lowerEntry.getValue());
         final float thrustNewtons = lowerEntry.getKey() + (higherEntry.getKey() - lowerEntry.getKey()) * diffFraction;
-        return thrustNewtons / maxThrust * 100;
+        return thrustNewtons / maxThrustNewtons * 100;
     }
 
-    private float convertThrustPrcntToRpmPrcnt(float thrustPrcnt) {
-        final float thrustNewtons = thrustPrcnt / 100 * maxThrust;
-        if (thrustRpmPrcntMap.containsKey(thrustNewtons)) {
-            return thrustRpmPrcntMap.get(thrustNewtons);
+    private float convertThrustToRpm(float thrust) {
+        final float thrustNewtons = thrust / 100 * maxThrustNewtons;
+        if (thrustToRpmMap.containsKey(thrustNewtons)) {
+            return thrustToRpmMap.get(thrustNewtons);
         }
-        final Map.Entry<Float, Float> lowerEntry = thrustRpmPrcntMap.lowerEntry(thrustNewtons);
-        final Map.Entry<Float, Float> higherEntry = thrustRpmPrcntMap.higherEntry(thrustNewtons);
+        final Map.Entry<Float, Float> lowerEntry = thrustToRpmMap.lowerEntry(thrustNewtons);
+        final Map.Entry<Float, Float> higherEntry = thrustToRpmMap.higherEntry(thrustNewtons);
         final Float diffFraction = (thrustNewtons - lowerEntry.getKey()) / (higherEntry.getKey() - lowerEntry.getKey());
         return lowerEntry.getValue() + (higherEntry.getValue() - lowerEntry.getValue()) * diffFraction;
     }
 
-    private float calcPwmFromRpmPercent(float percentValue) throws PwmValRangeException {
-        final float pwmValue = pwmMinDutyMs + ((float) (pwmMaxDutyMs - pwmMinDutyMs)) / 100 * percentValue;
+    private float calcPwmFromRpm(float rpm) throws PwmValRangeException {
+        final float pwmValue = pwmMinDutyMs + ((float) (pwmMaxDutyMs - pwmMinDutyMs)) / 100 * rpm;
         if (pwmValue < pwmMinDutyMs || pwmValue > pwmMaxDutyMs) {
             throw new PwmValRangeException("Calculated pwm value " + pwmValue
                 + " is out of EMAX CF2822 range" + pwmMinDutyMs + " - " + pwmMaxDutyMs + ".");
